Fix multiple layout issues

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -30,9 +30,9 @@
   // Replace with corresponding template values
   @container-width: 960px;
 
-  @spacing__first--desktop: 40px;
-  @spacing__first--tablet:  30px;
-  @spacing__first--mobile:  20px;
+  @spacing__first--desktop: 0px;
+  @spacing__first--tablet:  0px;
+  @spacing__first--mobile:  0px;
 
   @spacing--other: 30px;
 
@@ -44,7 +44,13 @@
     margin-left: auto;
     margin-right: auto;
     max-width: @container-width;
-    width: 90%;
+    width: 100%;
+  }
+
+  .style--light, .style--dark, .style--accent, .style--background-image {
+    .row__container {
+      width: 90% !important;
+    }
   }
 
   // Move spacing to first widget in the main zone (not sections)
